--- a/package.json
+++ b/package.json
@@ -1,31 +1,24 @@
 {
-  "name": "wc-base-typescript",
-  "version": "1.0.0",
+  "name": "todolist-components",
+  "version": "0.0.1",
   "description": "Project to create web components with typescript",
   "main": "index.js",
   "scripts": {
     "start": "rollup -c --watch",
     "build": "rollup -c",
     "lint": "eslint 'src/**/*.ts'",
-    "test": "karma start karma.conf.js",
-    "storybook": "start-storybook",
-    "storybook-build": "build-storybook -c .storybook -o dist-storybook"
+    "test": "karma start karma.conf.js"
   },
   "repository": {
     "type": "git",
     "url": ""
   },
-  "author": "tx2z",
-  "license": "ISC",
+  "author": "nickmaris",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
-    "@storybook/addon-a11y": "^5.3.21",
-    "@storybook/addon-knobs": "^5.3.21",
-    "@storybook/addon-notes": "^5.3.21",
-    "@storybook/addon-viewport": "^5.3.21",
-    "@storybook/html": "^5.3.21",
     "@types/jasmine": "^3.5.14",
     "@types/node": "^13.13.21",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
@@ -46,7 +39,6 @@
     "karma-jasmine-html-reporter": "^1.5.4",
     "karma-rollup-preprocessor": "^7.0.5",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "^4.0.2",
     "lit-html": "^1.3.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
@@ -70,6 +62,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "@webcomponents/webcomponentsjs": "^2.4.4"
+    "@webcomponents/webcomponentsjs": "^2.4.4",
+    "puppeteer": "^5.5.0"
   }
 }
